Bug 85867 - [Chromium] Assertions.cpp should work on OS(ANDROID)
Summary: [Chromium] Assertions.cpp should work on OS(ANDROID)
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: New Bugs (show other bugs)
Version: 528+ (Nightly build)
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Adam Barth
URL:
Keywords:
Depends on:
Blocks: 66687
  Show dependency treegraph
 
Reported: 2012-05-07 23:46 PDT by Adam Barth
Modified: 2012-05-08 01:40 PDT (History)
4 users (show)

See Also:


Attachments
Patch (1.57 KB, patch)
2012-05-07 23:48 PDT, Adam Barth
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Adam Barth 2012-05-07 23:46:15 PDT
[Chromium] Assertions.cpp should work on OS(ANDROID)
Comment 1 Adam Barth 2012-05-07 23:48:20 PDT
Created attachment 140681 [details]
Patch
Comment 2 WebKit Review Bot 2012-05-08 00:33:27 PDT
Comment on attachment 140681 [details]
Patch

Clearing flags on attachment: 140681

Committed r116401: <http://trac.webkit.org/changeset/116401>
Comment 3 WebKit Review Bot 2012-05-08 00:33:31 PDT
All reviewed patches have been landed.  Closing bug.
Comment 4 Peter Beverloo 2012-05-08 01:40:02 PDT
SGTM, thanks!