[Chromium] Assertions.cpp should work on OS(ANDROID) https://bugs.webkit.org/show_bug.cgi?id=85867

Reviewed by Eric Seidel.

Some minor ifdefs for OS(ANDROID) on PLATFORM(CHROMIUM).

* wtf/Assertions.cpp:


git-svn-id: svn://svn.chromium.org/blink/trunk@116401 bbb929c8-8fbe-4397-9dbb-9b2b20218538